refact:[UIUX-327] fixed Titles of Compliance Trend and Trend Of Total And Compliant Assets alignment

--- a/webapp/src/app/pacman-features/secondary-components/policy-trend/policy-trend.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/policy-trend/policy-trend.component.css
@@ -19,6 +19,15 @@
     min-height: 25.83em;
 }
 
+.header-wrapper{
+    padding: 16px;
+    border-bottom: 1px solid var(--border-200);
+}
+
+#PolicyTrend{
+    padding: 14px 8px;
+}
+
 .multiline-brush-zoom-container {
     position: relative;
     min-height: 25.83em;
